UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Company_Officer__c.field-meta.xml
<CustomField>
    <fullName>Company_Officer__c</fullName>
    <label>Company Officer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>