UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disconnect_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Altice</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Lumen</fullName>
            </value>
            <value>
                <fullName>Spectrum</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Zayo</fullName>
            </value>
            <value>
                <fullName>GTT</fullName>
            </value>
            <value>
                <fullName>Crown Castle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>