UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>Who to notify of Firm Order Confirmation -FOC</inlineHelpText>
    <label>Contact Email (FOC)</label>
    <type>Email</type>
</CustomField>