UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Contract_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Contract_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract/Schedule #</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Orders (Contract/Schedule #)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>