UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Copper_or_Fiber__c.field-meta.xml
<CustomField>
    <fullName>Copper_or_Fiber__c</fullName>
    <label>Copper or Fiber?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>