UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/COVID19_Order_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>COVID19_Order_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to track orders given COVID19 issue.</description>
    <inlineHelpText>Used to identify orders cancelled as a result of COVID19.</inlineHelpText>
    <label>COVID19 - Order Cancellation</label>
    <type>Checkbox</type>
</CustomField>