UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPE__c.field-meta.xml
<CustomField>
    <fullName>CPE__c</fullName>
    <formula>Opportunity.Total_CPE_NRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>