UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPE_Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CPE_Billing_Account_Number__c</fullName>
    <label>CPE Billing Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>