UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPE_COE__c.field-meta.xml
<CustomField>
    <fullName>CPE_COE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPE COE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>