UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPE_COE_Stage__c.field-meta.xml
<CustomField>
    <fullName>CPE_COE_Stage__c</fullName>
    <label>CPE COE Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UCaaS_Cutover_Picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Audit Review</fullName>
            </value>
            <value>
                <fullName>NPR Ordering</fullName>
            </value>
            <value>
                <fullName>Establish DPI Billing Account</fullName>
            </value>
            <value>
                <fullName>Add to WIP</fullName>
            </value>
            <value>
                <fullName>NBC</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>CPE COE Completed</fullName>
            </value>
            <value>
                <fullName>Ordering CPE Equipment</fullName>
            </value>
            <value>
                <fullName>Establishing DPI CPE Account</fullName>
            </value>
            <value>
                <fullName>Send to WIP</fullName>
            </value>
            <value>
                <fullName>Waiting on COC/COA</fullName>
            </value>
            <value>
                <fullName>CPE Order Billed</fullName>
            </value>
            <value>
                <fullName>WIP Billing Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>