UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPE_DCS__c.field-meta.xml
<CustomField>
    <fullName>CPE_DCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPE DCS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>