UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPE_DCS_Stage__c.field-meta.xml
<CustomField>
    <fullName>CPE_DCS_Stage__c</fullName>
    <label>CPE DCS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UCaaS_Cutover_Picklist__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Coordinate Kickoff Call</fullName>
            </value>
            <value>
                <fullName>Kickoff Call</fullName>
            </value>
            <value>
                <fullName>DGF Completed</fullName>
            </value>
            <value>
                <fullName>Coordinate Internal Review</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>Coordinate CXR Touch Point</fullName>
            </value>
            <value>
                <fullName>CXR Touch Point</fullName>
            </value>
            <value>
                <fullName>Hold Pending Tech Rx CPE</fullName>
            </value>
            <value>
                <fullName>Coordinate Install</fullName>
            </value>
            <value>
                <fullName>TTU</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>CPE DCS Completed</fullName>
            </value>
            <value>
                <fullName>Review Order</fullName>
            </value>
            <value>
                <fullName>Schedule CDC Call</fullName>
            </value>
            <value>
                <fullName>Revised CDC Uploaded</fullName>
            </value>
            <value>
                <fullName>Internal Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Internal Call Completed</fullName>
            </value>
            <value>
                <fullName>Welcome Email Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>