UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPECOE_Lock__c.field-meta.xml
<CustomField>
    <fullName>CPECOE_Lock__c</fullName>
    <formula>OR(

OR(
ispickval(CPE_DCS_Stage__c, &quot;&quot;),
ispickval(CPE_DCS_Stage__c, &quot;Review Order&quot;),
ispickval(CPE_DCS_Stage__c, &quot;Schedule CDC Call&quot;)
),

AND(
ispickval(CPE_COE_Stage__c, &quot;Review Order&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Review Order&quot;)
),

AND(
ispickval(CPE_COE_Stage__c, &quot;Waiting on COC/COA&quot;),
OR(
ispickval(Hot_Cut_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist in Progress&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist Completed&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Schedule Migration Call&quot;)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPECOE Lock</label>
    <type>Checkbox</type>
</CustomField>