UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPEDCS_Lock__c.field-meta.xml
<CustomField>
    <fullName>CPEDCS_Lock__c</fullName>
    <formula>OR(

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(VoIP_Translations_Stage__c, &quot;&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Review Order&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Revised CDC Uploaded&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist in Progress&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(VoIP_Translations_Stage__c, &quot;Review Order&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(VoIP_Translations_Stage__c, &quot;Translations In Progress&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(VoIP_Translations_Stage__c, &quot;Translation Complete&quot;)
),

AND(
ispickval( VoIP_Translations_Stage__c, &quot;Translation Complete&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist Completed&quot;)
),

AND(
ispickval( VoIP_Translations_Stage__c, &quot;Final CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist in Progress&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPEDCS Lock</label>
    <type>Checkbox</type>
</CustomField>