UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/CPQ__c.field-meta.xml
<CustomField>
    <fullName>CPQ__c</fullName>
    <label>CPQ</label>
    <length>30</length>
    <type>Text</type>
</CustomField>