UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Credit_App_Attached__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit App Attached</label>
    <type>Checkbox</type>
</CustomField>