UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Customer_Buying_The_State_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buying_The_State_Contract__c</fullName>
    <label>Customer Buying The State Contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>