UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Customer_Preferred_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_email__c</fullName>
    <label>Customer Preferred email</label>
    <type>Email</type>
</CustomField>