UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Date__c</fullName>
    <label>Customer Requested Date</label>
    <type>Date</type>
</CustomField>