UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/DGF__c.field-meta.xml
<CustomField>
    <fullName>DGF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Gathering Form (DGF)</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>DGF__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.OpportunityId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DGF__c</referenceTo>
    <relationshipLabel>Order</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>