UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/DID_Numbers_to_be_Disconnected__c.field-meta.xml
<CustomField>
    <fullName>DID_Numbers_to_be_Disconnected__c</fullName>
    <label>DID Numbers to be Disconnected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>