UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/DID_Order_Request_Details_Required__c.field-meta.xml
<CustomField>
    <fullName>DID_Order_Request_Details_Required__c</fullName>
    <label>DID Order Request Details-Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add to Existing MIPT</fullName>
            </value>
            <value>
                <fullName>Add to Existing SIP/IPC</fullName>
            </value>
            <value>
                <fullName>Block of Time</fullName>
            </value>
            <value>
                <fullName>Feature Change</fullName>
            </value>
            <value>
                <fullName>Move PRI to SIP/IPC</fullName>
            </value>
            <value>
                <fullName>Move SIP/IPC to PRI</fullName>
            </value>
            <value>
                <fullName>Add PRI</fullName>
                <isActive>false</isActive>
                <label>Add PRI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>