UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/DID_s_Added_Changed__c.field-meta.xml
<CustomField>
    <fullName>DID_s_Added_Changed__c</fullName>
    <label>DID&apos;s Added/Changed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>