UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Did_you_Quote_NRC_Charges_to_Incoming_Cu__c.field-meta.xml
<CustomField>
    <fullName>Did_you_Quote_NRC_Charges_to_Incoming_Cu__c</fullName>
    <inlineHelpText>Did you Quote NRC Charges to Incoming Customer?</inlineHelpText>
    <label>Quote NRC Charges to New Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>