UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Direct_Page__c.field-meta.xml
<CustomField>
    <fullName>Direct_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Page</label>
    <type>Checkbox</type>
</CustomField>