UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Direct_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Direct_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Pickup</label>
    <type>Checkbox</type>
</CustomField>