UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Disconnect_from_Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_from_Current_Location__c</fullName>
    <inlineHelpText>Is the current circuit being disconnected?</inlineHelpText>
    <label>Disc Existing CKT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>