UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason__c</fullName>
    <description>Disconnect Reason Field for Orders Disconnect Record Type.</description>
    <label>Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closure - Business or Location</fullName>
            </value>
            <value>
                <fullName>Service No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Cost Reduction - Customer Initiated</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Order Entry Error - Incorrect/Missing S&amp;E</fullName>
            </value>
            <value>
                <fullName>Pricing - Competition</fullName>
            </value>
            <value>
                <fullName>Service Reliability - Repair Issues</fullName>
            </value>
            <value>
                <fullName>Technology Not Available</fullName>
            </value>
            <value>
                <fullName>Temporary - Seasonal/Vacation Services</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Collections/Non-Pay</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Business/Location Closure or Reduction</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Competition/RFP</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Customer Retained - Product/Solution Migration</fullName>
            </value>
            <value>
                <fullName>Service Impairment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>