UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Disconnect_Type__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Type__c</fullName>
    <description>This was requested by Jesse Beller on 1/24/20</description>
    <inlineHelpText>Please choose the best selection for the disconnection.</inlineHelpText>
    <label>Disconnect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Site Closure/Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>