UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Disconnected_MRR__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_MRR__c</fullName>
    <description>This is for Ethernet Disconnect orders for the #Provisionning profile.</description>
    <inlineHelpText>Please enter monthly revenue lost as a positive number.</inlineHelpText>
    <label>Disconnected MRR</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>