UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Does_Customer_need_new_Toll_Free_Number__c.field-meta.xml
<CustomField>
    <fullName>Does_Customer_need_new_Toll_Free_Number__c</fullName>
    <label>Does Customer need new Toll Free Number?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>