UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Does_ETF_Apply__c.field-meta.xml
<CustomField>
    <fullName>Does_ETF_Apply__c</fullName>
    <label>Does ETF Apply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>