UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Does_the_customer_need_International_OCP__c.field-meta.xml
<CustomField>
    <fullName>Does_the_customer_need_International_OCP__c</fullName>
    <label>Does the customer need International OCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>