UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Does_the_Incoming_Customer_Need_a_Master__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Incoming_Customer_Need_a_Master__c</fullName>
    <inlineHelpText>Does the Incoming Customer Need a Master Summary Number</inlineHelpText>
    <label>Does New Customer Need Master Summary #</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>