UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/DSAT_Number__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Number__c</fullName>
    <label>DSAT Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>