UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/DSS_BLF_Enhanced_Monitor_Extensions_Btns__c.field-meta.xml
<CustomField>
    <fullName>DSS_BLF_Enhanced_Monitor_Extensions_Btns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSS/BLF Enhanced Monitor Extensions Btns</label>
    <type>Checkbox</type>
</CustomField>