UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Dynamic_or_Static__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_or_Static__c</fullName>
    <label>Dynamic or Static?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dynamic</fullName>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>