UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/E_Rate__c.field-meta.xml
<CustomField>
    <fullName>E_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Rate</label>
    <type>Checkbox</type>
</CustomField>