UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/EAS_LCP_Plan__c.field-meta.xml
<CustomField>
    <fullName>EAS_LCP_Plan__c</fullName>
    <label>EAS/LCP Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>