UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/EAS_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>EAS_Plan_Type__c</fullName>
    <label>EAS Plan Type</label>
    <type>TextArea</type>
</CustomField>