UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opt-Out  Email Notifications</description>
    <label>Opt-Out of Status Notifications</label>
    <type>Checkbox</type>
</CustomField>