UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Emergency_Notification__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Notification</label>
    <type>Checkbox</type>
</CustomField>