UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ERATE_Customer__c.field-meta.xml
<CustomField>
    <fullName>ERATE_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the order may be rejected until Federal Funding is approved. We need to ensure we confirm with the Account Executive or Denise McIntosh.</description>
    <inlineHelpText>If checked, the order may be rejected until Federal Funding is approved. We need to ensure we confirm with the Account Executive or Denise McIntosh.</inlineHelpText>
    <label>ERATE Customer</label>
    <type>Checkbox</type>
</CustomField>