UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ETF_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETF_Amount__c</fullName>
    <label>ETF Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>