UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Existing_Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Circuit_ID__c</fullName>
    <label>Existing Circuit ID?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>