UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Existing_CKT_requires_disconnect__c.field-meta.xml
<CustomField>
    <fullName>Existing_CKT_requires_disconnect__c</fullName>
    <label>Existing CKT requires disconnect?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>