UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Existing_Frontier_Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Existing_Frontier_Toll_Free__c</fullName>
    <label>Existing Frontier Toll Free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>