UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Federal_Account__c.field-meta.xml
<CustomField>
    <fullName>Federal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then the account falls under the Federal Team which requires special handling in DPI and M6.</description>
    <inlineHelpText>If checked then the account falls under the Federal Team which requires special handling in DPI and M6.</inlineHelpText>
    <label>Federal Account</label>
    <type>Checkbox</type>
</CustomField>