UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <label>Federal Tax ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>