UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/First_Bill_Review_Case_Issued__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Review_Case_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to check when process builder creates FBR case upon order complete.  This avoids duplicate cases.</description>
    <label>First Bill Review Case Issued</label>
    <type>Checkbox</type>
</CustomField>