UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Freeze_Intra_Inter_LATA_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Intra_Inter_LATA_Carrier__c</fullName>
    <label>Freeze Intra &amp; Inter LATA Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>