UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ftr_AssetizeOrder__c.field-meta.xml
<CustomField>
    <fullName>ftr_AssetizeOrder__c</fullName>
    <label>ftr_AssetizeOrder</label>
    <length>50</length>
    <type>Text</type>
</CustomField>