UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ftr_OrderType__c.field-meta.xml
<CustomField>
    <fullName>ftr_OrderType__c</fullName>
    <description>This field is populated during vlocity order creation based on the quote type</description>
    <label>Order Type (vlocity)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>