UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ftrImplementationSpecialistName__c.field-meta.xml
<CustomField>
    <fullName>ftrImplementationSpecialistName__c</fullName>
    <label>Implementation Specialist Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>