UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Global_Account_Number_GAN__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Number_GAN__c</fullName>
    <label>Global Account Number (GAN)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>