UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Group_Page__c.field-meta.xml
<CustomField>
    <fullName>Group_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Page</label>
    <type>Checkbox</type>
</CustomField>