UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Group_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Group_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Pickup</label>
    <type>Checkbox</type>
</CustomField>