UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Held_Reason__c.field-meta.xml
<CustomField>
    <fullName>Held_Reason__c</fullName>
    <label>Held Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation Missing/Unclear</fullName>
            </value>
            <value>
                <fullName>Scope of Work Missing/Unclear</fullName>
            </value>
            <value>
                <fullName>Incorrect Pricing</fullName>
            </value>
            <value>
                <fullName>Product Conflict</fullName>
            </value>
            <value>
                <fullName>Customer Delay</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Tables Request</fullName>
            </value>
            <value>
                <fullName>Schedule ID</fullName>
            </value>
            <value>
                <fullName>SIFT Ticket</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>